# bebop

./: install.ps1  install.sh
Core/Generators/CPlusPlus/: CPlusPlusGenerator.cs
Core/Generators/Python/: PythonGenerator.cs
Laboratory/C/: .gitignore
Laboratory/C++/cmake/: CMakeLists.txt
Laboratory/C/cmake/: .gitignore  CMakeLists.txt  sandbox.c
Laboratory/C/test/: jazz_bench.c
Laboratory/Integration/Python/src/: lib.py
Laboratory/Python/test/: test_basic_types.py  test_date_precision.py  test_writer_framing.py
Runtime/Python/: setup.cfg
Runtime/Python/src/python_bebop/: bebop.py
