[metadata]
name = python_bebop
version = 1.3.2
author = Korbinian Habereder
author_email = korbinian.habereder@gmail.com
description = bebop runtime bindings for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/6over3/bebop
project_urls =
    Bug Tracker = https://github.com/6over3/bebop
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = Apache-2.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src